--- a/pages/login.html
+++ b/pages/login.html
@@ -64,67 +64,82 @@
             height: 50px;
         }
 
-        @media screen and (min-width: 768px) and (max-width: 1024px){
-            #box{
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+            #box {
                 width: 80% !important;
                 height: 45% !important;
             }
 
-            .form-control{
+            .form-control {
                 width: 70%;
             }
         }
 
-        @media screen and (min-width: 1024px){
-            #box{
+        @media screen and (min-width: 1024px) {
+            #box {
                 width: 70% !important;
                 height: 70% !important;
             }
 
-            .form-control{
+            .form-control {
                 width: 70%;
             }
         }
 
-        @media screen and (min-width: 1366px){
-            #box{
+        @media screen and (min-width: 1366px) {
+            #box {
                 width: 55% !important;
                 height: 70% !important;
             }
         }
 
-        @media screen and (min-width: 667px){
-            #box{
+        @media screen and (min-width: 667px) {
+            #box {
                 width: 75%;
                 height: 90%;
-           
+
             }
         }
-
     </style>
 </head>
 
 <body>
     <form action="connect_login.php" method="post">
-        <di                                                                                                                                                                                                                                                                                                                                        v class="form-group">
+        <di v class="form-group">
             <div class="container d-flex justify-content-center align-items-center geral" style="height: 100vh;">
-                <div class="container-fluid d-flex flex-column align-items-center justify-content-center" id="box" style="padding-top: 16px; padding-bottom: 16px;">
+                <div class="container-fluid d-flex flex-column align-items-center justify-content-center" id="box"
+                    style="padding-top: 16px; padding-bottom: 16px;">
 
                     <h1>LOGIN</h1>
                     <br>
-                    <input type="text" class="form-control" id="cpf" name="userCPF" placeholder="CPF">
+                    <input type="text" class="form-control" id="cpf" name="userCPF" placeholder="CPF" maxlength="14"
+                        oninput="applyCpfMask(this)">
                     <br>
                     <br>
                     <input type="password" class="form-control" id="senha" name="passwords" placeholder="Senha">
                     <br>
-                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;">Login</button>
+                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button"
+                        style="margin-top: 0.5rem;">Login</button>
+                </div>
             </div>
-        </div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+    <script>
+        function applyCpfMask(input) {
+            // Remove qualquer caractere não numérico
+            let cpf = input.value.replace(/\D/g, '');
+
+            // Aplica a máscara de CPF (XXX.XXX.XXX-XX)
+            cpf = cpf.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4');
+
+            // Atualiza o valor do campo
+            input.value = cpf;
+        }
+    </script>
 </body>
 
 </html>
