--- a/pages/anamnesemédica.html
+++ b/pages/anamnesemédica.html
@@ -129,8 +129,18 @@
       .navbar-title {
         font-size: 10.6PX;
       }
-
     }
+
+    .btn-outline-primary{
+            color: #167e56;
+            border-color: #167e56;
+        }
+
+        .btn:hover{
+            color: white;
+            border-color: #167e56;
+            background-color: #167e56;
+        }
   </style>
 </head>
 
@@ -239,9 +249,6 @@
                   </li>
                 </ul>
               </li>
-              <!-- <li class="nav-item" style="list-style-type: none">
-                <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
-              </li> -->
               <li class="nav-item" style="list-style-type: none">
                 <a class="nav-link" href="#">SAIR</a>
               </li>
@@ -410,7 +417,7 @@
           Voltar
         </button>
         <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'gestacional.html'">
-          Proximo
+          Próximo
         </button>
       </div>
     </div>
