--- a/pages/login.html
+++ b/pages/login.html
@@ -101,16 +101,17 @@
             }
         }
 
-        .btn-outline-primary{
-            color: #167e56;
+        .btn-primary{
+            background-color: #167e56;
             border-color: #167e56;
         }
 
-        .btn:hover{
-            color: white;
+        .btn-primary:hover{
+            background-color: #065839;
             border-color: #167e56;
-            background-color: #167e56;
         }
+
+
     </style>
 </head>
 
@@ -129,7 +130,7 @@
                     <br>
                     <input type="password" class="form-control" id="senha" name="passwords" placeholder="Senha">
                     <br>
-                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button"
+                    <button type="submit" class="btn btn-primary btn-lg" name="submit-button"
                         style="margin-top: 0.5rem;">Login</button>
                 </div>
             </div>
