--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -370,12 +370,17 @@
         </div>
       </div>
     </div>
+    <!-- <div class="espaço_botao">
+      <div class="botao">
+        <button type="button" class="btn btn-outline-primary btn-lg"
+          onclick="window.location.href = 'vitimaera.html'">Próximo</button>
+      </div>
+    </div> -->
+
     <div class="espaço_botao">
       <div class="botao">
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'obsimportante.html'">Voltar</button>
-        <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'vitimaera.html'">Próximo</button>
+          onclick="window.location.href = 'situation.html'">Próximo</button>
       </div>
     </div>
   </form>
