--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -403,7 +403,7 @@
     <div class="espaço_botao">
       <div class="botao">
         <button type="button" class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href = 'gestacional.html'">Voltar</button>
+          onclick="window.location.href = 'ocorrencia.html'">Voltar</button>
         <button type="button" class="btn btn-outline-primary btn-lg"
           onclick="window.location.href = 'sinais.html'">Próximo</button>
       </div>
