--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -269,7 +269,7 @@
   <div class="espaço_botao">
     <div class="botao">
       <button type="button" class="btn btn-outline-primary btn-lg"
-        onclick="window.location.href = 'anamnesemédica.html'">Voltar</button>
+        onclick="window.location.href = 'conducao.html'">Voltar</button>
       <button type="button" class="btn btn-outline-primary btn-lg"
         onclick="window.location.href = 'ocorrencia.html'">Proximo</button>
     </div>
