--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -83,8 +83,33 @@
             margin: 0px;
         }
 
-        .cards .card:hover{
+        .cards .card:hover {
             border-color: #333333;
+        }
+
+        .btn-outline-primary {
+            color: #167e56;
+            border-color: #167e56;
+        }
+
+        .btn:hover {
+            color: white;
+            border-color: #167e56;
+            background-color: #167e56;
+        }
+
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 10vh;
+            justify-content: center;
+        }
+
+        .botao {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
         }
     </style>
 </head>
@@ -125,7 +150,8 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" style="white-space: break-spaces"
-                                    onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                                    onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS
+                                    SUSPEITOS</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
@@ -151,7 +177,8 @@
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS
+                                    VITAIS</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
@@ -164,7 +191,8 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" style="white-space: break-spaces"
-                                    onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                                    onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE
+                                    TRANSPORTE</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
@@ -244,75 +272,90 @@
                 <div class="row cards">
                     <div class="col-md-12 d-flex gap-4">
                         <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Amputacao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Amputação">
+                            <img src="../imagenslocalizartraumas/Amputacao.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Amputação">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small">Amputação</h5>
+                                <h5 class="card-title small">Amputação</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Evisceracao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Evisceracao">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Evisceracao.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Evisceracao">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small">Evisceração</h5>
+                                <h5 class="card-title small">Evisceração</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/FAB_FAF.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="FAB/FAF">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/FAB_FAF.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="FAB/FAF">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small">FAB/FAF</h5>
+                                <h5 class="card-title small">FAB/FAF</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Ferimentos diversos">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Ferimentos_diversos.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Ferimentos diversos">
                             <div class="card-body align-self-center d-flex align-items-center ">
-                              <h5 class="card-title small text-center">Ferimentos diversos</h5>
+                                <h5 class="card-title small text-center">Ferimentos diversos</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Fratura/Luxação/Entorse">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Fratura_Luxacao_Entorse.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3"
+                                alt="Fratura/Luxação/Entorse">
                             <div class="card-body">
-                              <h5 class="card-title small">Fratura/Luxação/Entorse</h5>
+                                <h5 class="card-title small">Fratura/Luxação/Entorse</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Hemorragia.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Hemorragia">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Hemorragia.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Hemorragia">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small">Hemorragia</h5>
+                                <h5 class="card-title small">Hemorragia</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Queimadura_1.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 1° grau">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Queimadura_1.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 1° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small text-center">Queimadura 1° grau</h5>
+                                <h5 class="card-title small text-center">Queimadura 1° grau</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Queimadura_2.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 2° grau">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Queimadura_2.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 2° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small text-center">Queimadura 2° grau</h5>
+                                <h5 class="card-title small text-center">Queimadura 2° grau</h5>
                             </div>
-                          </div>
+                        </div>
 
-                          <div class="card" style="width: 10rem;">
-                            <img src="../imagenslocalizartraumas/Queimadura_3.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 3° grau">
+                        <div class="card" style="width: 10rem;">
+                            <img src="../imagenslocalizartraumas/Queimadura_3.png"
+                                class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 3° grau">
                             <div class="card-body align-self-center d-flex align-items-center">
-                              <h5 class="card-title small text-center">Queimadura 3° grau</h5>
+                                <h5 class="card-title small text-center">Queimadura 3° grau</h5>
                             </div>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-between mt-4">
-                <button type="submit" class="btn btn-primary" id="backBtn" onclick="window.location.href = 'problemasuspeitos.html'">Voltar</button>
-                <button type="submit" class="btn btn-primary" id="nextBtn" onclick="window.location.href = 'sinaisesintomas.html'">Próximo</button>
-            </div>
+
         </form>
+        <div class="espaço_botao">
+            <div class="botao">
+                <button type="button" class="btn btn-outline-primary btn-lg"
+                    onclick="window.location.href = 'problemasuspeitos.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg"
+                    onclick="window.location.href = 'sinaisesintomas.html'">Próximo</button>
+            </div>
+        </div>
     </div>
 </div>
 </div>
