--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -475,7 +475,7 @@
                     <!-- Botão Voltar e Proxima -->
                     <div class="espaço_botao">
                         <div class="botao">
-                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'vitimaera.html'">Voltar</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'equipedeatendimento.html'">Voltar</button>
                             <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cinematica.html'">Proximo</button>
                         </div>
                     </div>
