--- a/pages/problemasuspeitos.html
+++ b/pages/problemasuspeitos.html
@@ -444,7 +444,7 @@
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg"
-                    onclick="window.location.href = 'gestacional.html'">Voltar</button>
+                    onclick="window.location.href = 'sinais.html'">Voltar</button>
                 <button type="button" class="btn btn-outline-primary btn-lg"
                     onclick="window.location.href = 'loctromas.html'">Próximo</button>
             </div>
