--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -430,7 +430,7 @@
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'ocorrencia.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cinematica.html'">Voltar</button>
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'problemasuspeitos.html'">Proximo</button>
             </div>
         </div>
