--- a/pages/situation.html
+++ b/pages/situation.html
@@ -276,7 +276,7 @@
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'home.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cadastropaciente.html'">Voltar</button>
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'vitimaera.html'">Proximo</button>
             </div>
         </div>
